extra-tests/objects/RollupParent__c/fields/AverageControl__c.field-meta.xml
<CustomField>
    <fullName>AverageControl__c</fullName>
<label>Average Control</label>
    <precision>18</precision><required>false</required><scale>2</scale>
<type>Number</type><unique>false</unique>
</CustomField>