extra-tests/objects/RollupParent__c/fields/AverageField__c.field-meta.xml
<CustomField>
    <fullName>AverageField__c</fullName>
    <label>Average Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>