extra-tests/objects/RollupParent__c/fields/BystanderCount__c.field-meta.xml
<CustomField>
    <fullName>BystanderCount__c</fullName>
    <label>Bystander Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>