extra-tests/objects/RollupParent__c/fields/GroupByAvgField__c.field-meta.xml
<CustomField>
    <fullName>GroupByAvgField__c</fullName>
    <label>Group By Avg Field</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>