extra-tests/objects/RollupParent__c/fields/GroupByControl__c.field-meta.xml
<CustomField>
    <fullName>GroupByControl__c</fullName>
    <label>Group By Control</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>