extra-tests/objects/RollupParent__c/fields/GroupByField__c.field-meta.xml
<CustomField>
    <fullName>GroupByField__c</fullName>
    <label>Group By Field</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>