extra-tests/objects/RollupParent__c/fields/GroupByMultiField__c.field-meta.xml
<CustomField>
    <fullName>GroupByMultiField__c</fullName>
    <label>Group By Multi Field</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>