extra-tests/objects/RollupParent__c/fields/LastControl__c.field-meta.xml
<CustomField>
    <fullName>LastControl__c</fullName>
<label>LastControl</label>
    <precision>18</precision><required>false</required><scale>0</scale>
<type>Number</type><unique>false</unique>
</CustomField>