extra-tests/objects/RollupParent__c/fields/LastField__c.field-meta.xml
<CustomField>
    <fullName>LastField__c</fullName>
<label>LastField</label>
    <precision>18</precision><required>false</required><scale>0</scale>
<type>Number</type><unique>false</unique>
</CustomField>