extra-tests/objects/RollupParent__c/fields/SiblingNullControl__c.field-meta.xml
<CustomField>
    <fullName>SiblingNullControl__c</fullName>
    <label>Sibling Null Control</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>