extra-tests/objects/RollupParent__c/fields/SiblingNullField__c.field-meta.xml
<CustomField>
    <fullName>SiblingNullField__c</fullName>
    <label>Sibling Null Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>