extra-tests/objects/RollupParent__c/fields/WhereAvgControl__c.field-meta.xml
<CustomField>
    <fullName>WhereAvgControl__c</fullName>
    <label>Where Avg Control</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>