extra-tests/objects/RollupParent__c/fields/WhereAvgField__c.field-meta.xml
<CustomField>
    <fullName>WhereAvgField__c</fullName>
    <label>Where Avg Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>