extra-tests/objects/RollupParent__c/fields/WhereSumControl__c.field-meta.xml
<CustomField>
    <fullName>WhereSumControl__c</fullName>
<label>WhereSumControl</label>
    <precision>18</precision><required>false</required><scale>2</scale>
<type>Number</type><unique>false</unique>
</CustomField>