extra-tests/objects/RollupParent__c/fields/WhereSumField__c.field-meta.xml
<CustomField>
    <fullName>WhereSumField__c</fullName>
<label>WhereSumField</label>
    <precision>18</precision><required>false</required><scale>2</scale>
<type>Number</type><unique>false</unique>
</CustomField>